# Examen_Parcial_Parcial_3-Vinculante-

./: Agente.cpp  Agente.h  CMakeLists.txt  Distribución.cpp  Distribución.h  Readme.md  main.cpp
Actor/: Actor.cpp  Actor.h
Launcher/: Launcher.cpp  Launcher.h
Tarea/: Tarea.cpp  Tarea.h
crud/: crud.cpp  crud.h
